# pypassword-protect

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
passprotect/: helpers.py  main.py
pypassword_protect/run/: main.py
pypassword_protect/source/: encryption_decryption.py  helpers.py
test/: conftest.py  test_create_file.py  test_helpers.py  test_lock_file.py  test_lock_unlock_file.py
test/tmp_test_files/: __init__.py  tmp_file_locked
